fixed layout issue in login page and home page active tab issue

--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -130,11 +130,11 @@
 
 .image-wrapper {
     position: absolute;
-    width: 320px;
-    height: 320px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     overflow: hidden;
-    top: -60px;
+    top: -70px;
     left: 50%;
     transform: translateX(-50%);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -169,7 +169,7 @@
     }
 
     .login-image-container {
-        height: 280px;
+        height: 300px;
         background-color: transparent;
     }
 
@@ -177,7 +177,7 @@
         width: 440px;
         /* Even larger for impact */
         height: 440px;
-        top: -140px;
+        top: -150px;
         left: 65%;
         /* Shifted to match top-right focus */
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
